@@ -1,4 +1,6 @@
 
+20220520 recover from panic in exportMetricsOnDelete
+
 20220520 use CombinedOutput to print spark-submit output
 
 20220510 support extra ports in Spark UI service
